--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animasyonlu Login Form</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
+
 <body>
-    
+    <div class="container">
+
+        <!-- Logo -->
+        <div class="logo">
+            <img src="logo.png" alt="logo">
+        </div>
+        <!-- Logo -->
+
+        <!-- Form Elemanlari -->
+        <form action="#">
+            <div class="title">Login</div>
+            <div class="input-box">
+                <input type="email" placeholder="Email Giriniz..." required>
+                <div class="underline"></div>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Sifrenizi Giriniz..." required>
+                <div class="underline"></div>
+            </div>
+            <div class="input-box button">
+                <input type="submit" value="Giris Yap">
+            </div>
+        </form>
+        <!-- Form Elemanlari -->
+
+        <div class="text">veya Sosyal Medyayla Baglanin</div>
+
+        <!-- Sosyal Mediya Butonlari -->
+        <div class="github">
+            <a href="#"><i class="fab fa-github"></i>Github ile Giris</a>
+        </div>
+        <div class="twitter">
+            <a href="#"><i class="fab fa-twitter"></i>Twitter ile Giris</a>
+        </div>
+        <div class="facebook">
+            <a href="#"><i class="fab fa-facebook"></i>Facebook ile Giris</a>
+        </div>
+        <!-- Sosyal Mediya Butonlari -->
+
+    </div>
 </body>
+
 </html>
